--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 # packages for RTD to pick up (not used for local dev)
 # crate-docs-theme>=0.7
-okchain1-docs-theme>=0.1.24
+okchain1-docs-theme>=0.1.35
 sphinx-csv-filter
 Pygments==2.3.1
 
@@ -12,10 +12,12 @@ recommonmark==0.6.0
 restructuredtext-lint==1.3.0
 six==1.12.0
 snowballstemmer==2.0.0
+# Sphinx==1.3.1
 Sphinx==2.3.0
-sphinx-markdown-tables==0.0.10
+docutils==0.12
+sphinx-markdown-tables==0.0.15
 sphinx-autobuild==0.7.1
-sphinx-rtd-theme==0.4.3
+# sphinx-rtd-theme==0.1.0
 sphinxcontrib-applehelp==1.0.1
 sphinxcontrib-devhelp==1.0.1
 sphinxcontrib-htmlhelp==1.0.2
