okexchain->OEC,okchain->OEC

--- a/KIP-14/services/wallet/types/squeezer.yml
+++ b/KIP-14/services/wallet/types/squeezer.yml
@@ -51,4 +51,4 @@ swagger:
           example: 'OKt'
         info:
           type: string
-          example: Okchain wallet.
+          example: OEC wallet.
